ArabicCompiler.Native/Bison/parser.output
Terminals unused in grammar

    LEXICAL_ERROR


State 66 conflicts: 2 shift/reduce
State 219 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM program_name SEMICOLON program_block DOT

    2 program_block: declaration_part_opt instruction_list

    3 declaration_part_opt: %empty
    4                     | declaration_part

    5 declaration_part: constant_definitions type_definitions_opt variable_definitions_opt procedure_definitions_opt
    6                 | type_definitions variable_definitions_opt procedure_definitions_opt
    7                 | variable_definitions procedure_definitions_opt
    8                 | procedure_definitions

    9 constant_definitions: CONST constant_definition constant_definition_tail

   10 constant_definition_tail: %empty
   11                         | constant_definition_tail constant_definition

   12 constant_definition: constant_name ASSIGN constant_value SEMICOLON

   13 type_definitions_opt: %empty
   14                     | type_definitions

   15 type_definitions: TYPE type_definition type_definition_tail

   16 type_definition_tail: %empty
   17                     | type_definition_tail type_definition

   18 type_definition: type_name ASSIGN compound_type SEMICOLON

   19 compound_type: list_type
   20              | record_type

   21 list_type: LIST LBRACKET INTEGER_LITERAL RBRACKET OF data_type

   22 record_type: RECORD LBRACE field_list RBRACE

   23 field_list: field_definition field_definition_tail

   24 field_definition_tail: %empty
   25                      | field_definition_tail SEMICOLON field_definition

   26 field_definition: field_name identifier_tail COLON data_type

   27 identifier_tail: %empty
   28                | identifier_tail COMMA IDENTIFIER

   29 variable_definitions_opt: %empty
   30                         | variable_definitions

   31 variable_definitions: VAR variable_definition variable_definition_tail

   32 variable_definition_tail: %empty
   33                         | variable_definition_tail variable_definition

   34 variable_definition: variable_group SEMICOLON

   35 variable_group: variable_name variable_name_tail COLON data_type

   36 variable_name_tail: %empty
   37                   | variable_name_tail COMMA variable_name

   38 procedure_definitions_opt: %empty
   39                          | procedure_definitions

   40 procedure_definitions: procedure_definition procedure_definition_tail

   41 procedure_definition_tail: %empty
   42                          | procedure_definition_tail procedure_definition

   43 procedure_definition: procedure_header procedure_block SEMICOLON

   44 procedure_header: PROCEDURE procedure_name LPAREN formal_parameters_opt RPAREN SEMICOLON

   45 procedure_block: program_block

   46 formal_parameters_opt: %empty
   47                      | formal_parameters

   48 formal_parameters: formal_parameter formal_parameter_tail

   49 formal_parameter_tail: %empty
   50                      | formal_parameter_tail SEMICOLON formal_parameter

   51 formal_parameter: pass_mode_opt variable_group

   52 pass_mode_opt: %empty
   53              | BY_VALUE
   54              | BY_REFERENCE

   55 data_type: INT_TYPE
   56          | REAL_TYPE
   57          | BOOL_TYPE
   58          | CHAR_TYPE
   59          | STRING_TYPE
   60          | type_name

   61 instruction_list: LBRACE instruction instruction_tail RBRACE

   62 instruction_tail: %empty
   63                 | instruction_tail SEMICOLON instruction

   64 instruction: assignment_statement
   65            | input_statement
   66            | output_statement
   67            | procedure_call
   68            | conditional_statement
   69            | repetition_statement
   70            | instruction_list
   71            | %empty

   72 assignment_statement: variable_access ASSIGN expression

   73 input_statement: READ LPAREN variable_access RPAREN

   74 output_statement: PRINT LPAREN print_list RPAREN

   75 print_list: print_item print_item_tail

   76 print_item_tail: %empty
   77                | print_item_tail COMMA print_item

   78 print_item: variable_access
   79           | literal

   80 procedure_call: procedure_name LPAREN actual_parameters_opt RPAREN

   81 actual_parameters_opt: %empty
   82                      | actual_parameters

   83 actual_parameters: actual_parameter actual_parameter_tail

   84 actual_parameter_tail: %empty
   85                      | actual_parameter_tail COMMA actual_parameter

   86 actual_parameter: expression

   87 conditional_statement: if_statement
   88                      | if_else_statement
   89                      | if_else_if_statement

   90 if_statement: IF LPAREN condition RPAREN THEN instruction

   91 condition: expression

   92 if_else_statement: if_statement ELSE instruction

   93 if_else_if_statement: if_statement SEMICOLON ELSE if_statement else_if_tail optional_else

   94 else_if_tail: %empty
   95             | else_if_tail SEMICOLON ELSE if_statement

   96 optional_else: %empty
   97              | ELSE instruction

   98 repetition_statement: for_statement
   99                     | while_statement
  100                     | repeat_until_statement

  101 for_statement: FOR LPAREN repetition_range RPAREN instruction

  102 repetition_range: variable_name ASSIGN expression TO expression step_opt

  103 step_opt: %empty
  104         | STEP expression

  105 while_statement: WHILE LPAREN condition RPAREN DO instruction

  106 repeat_until_statement: REPEAT instruction UNTIL LPAREN condition RPAREN

  107 expression: simple_expression
  108           | simple_expression relational_operator simple_expression

  109 relational_operator: LT
  110                    | GT
  111                    | LE
  112                    | GE
  113                    | EQ
  114                    | NE

  115 simple_expression: sign_opt term addition_tail

  116 sign_opt: %empty
  117         | sign_operator

  118 sign_operator: PLUS
  119              | MINUS

  120 addition_tail: %empty
  121              | addition_tail addition_operator term

  122 addition_operator: sign_operator
  123                  | OR

  124 term: factor multiplication_tail

  125 multiplication_tail: %empty
  126                    | multiplication_tail multiplication_operator factor

  127 multiplication_operator: POWER
  128                        | MUL
  129                        | REAL_DIV
  130                        | INT_DIV
  131                        | MOD
  132                        | AND

  133 factor: numeric
  134       | literal
  135       | boolean_value
  136       | identifier_factor
  137       | LPAREN expression RPAREN
  138       | NOT factor

  139 identifier_factor: IDENTIFIER
  140                  | IDENTIFIER selector

  141 variable_access: IDENTIFIER
  142                | IDENTIFIER selector

  143 selector: indexed_selector
  144         | field_selector

  145 indexed_selector: LBRACKET expression RBRACKET

  146 field_selector: DOT field_name

  147 constant_value: numeric
  148               | literal
  149               | boolean_value
  150               | constant_name

  151 numeric: INTEGER_LITERAL
  152        | REAL_LITERAL

  153 literal: STRING_LITERAL
  154        | CHAR_LITERAL

  155 boolean_value: TRUE
  156              | FALSE

  157 program_name: IDENTIFIER

  158 constant_name: IDENTIFIER

  159 type_name: IDENTIFIER

  160 field_name: IDENTIFIER

  161 variable_name: IDENTIFIER

  162 procedure_name: IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 1
    CONST (259) 9
    TYPE (260) 15
    LIST (261) 21
    OF (262) 21
    RECORD (263) 22
    VAR (264) 31
    PROCEDURE (265) 44
    BY_VALUE (266) 53
    BY_REFERENCE (267) 54
    INT_TYPE (268) 55
    REAL_TYPE (269) 56
    BOOL_TYPE (270) 57
    CHAR_TYPE (271) 58
    STRING_TYPE (272) 59
    READ (273) 73
    PRINT (274) 74
    IF (275) 90
    THEN (276) 90
    ELSE (277) 92 93 95 97
    FOR (278) 101
    TO (279) 102
    STEP (280) 104
    WHILE (281) 105
    DO (282) 105
    REPEAT (283) 106
    UNTIL (284) 106
    TRUE (285) 155
    FALSE (286) 156
    LT (287) 109
    GT (288) 110
    LE (289) 111
    GE (290) 112
    EQ (291) 113
    NE (292) 114
    PLUS (293) 118
    MINUS (294) 119
    OR (295) 123
    POWER (296) 127
    MUL (297) 128
    REAL_DIV (298) 129
    INT_DIV (299) 130
    MOD (300) 131
    AND (301) 132
    NOT (302) 138
    ASSIGN (303) 12 18 72 102
    DOT (304) 1 146
    COLON (305) 26 35
    SEMICOLON (306) 1 12 18 25 34 43 44 50 63 93 95
    COMMA (307) 28 37 77 85
    LBRACE (308) 22 61
    RBRACE (309) 22 61
    LBRACKET (310) 21 145
    RBRACKET (311) 21 145
    LPAREN (312) 44 73 74 80 90 101 105 106 137
    RPAREN (313) 44 73 74 80 90 101 105 106 137
    IDENTIFIER <text> (314) 28 139 140 141 142 157 158 159 160 161 162
    INTEGER_LITERAL <text> (315) 21 151
    REAL_LITERAL <text> (316) 152
    STRING_LITERAL <text> (317) 153
    CHAR_LITERAL <text> (318) 154
    LEXICAL_ERROR (319)


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    program (66)
        on left: 1
        on right: 0
    program_block (67)
        on left: 2
        on right: 1 45
    declaration_part_opt (68)
        on left: 3 4
        on right: 2
    declaration_part (69)
        on left: 5 6 7 8
        on right: 4
    constant_definitions (70)
        on left: 9
        on right: 5
    constant_definition_tail (71)
        on left: 10 11
        on right: 9 11
    constant_definition (72)
        on left: 12
        on right: 9 11
    type_definitions_opt (73)
        on left: 13 14
        on right: 5
    type_definitions (74)
        on left: 15
        on right: 6 14
    type_definition_tail (75)
        on left: 16 17
        on right: 15 17
    type_definition (76)
        on left: 18
        on right: 15 17
    compound_type (77)
        on left: 19 20
        on right: 18
    list_type (78)
        on left: 21
        on right: 19
    record_type (79)
        on left: 22
        on right: 20
    field_list (80)
        on left: 23
        on right: 22
    field_definition_tail (81)
        on left: 24 25
        on right: 23 25
    field_definition (82)
        on left: 26
        on right: 23 25
    identifier_tail (83)
        on left: 27 28
        on right: 26 28
    variable_definitions_opt (84)
        on left: 29 30
        on right: 5 6
    variable_definitions (85)
        on left: 31
        on right: 7 30
    variable_definition_tail (86)
        on left: 32 33
        on right: 31 33
    variable_definition (87)
        on left: 34
        on right: 31 33
    variable_group (88)
        on left: 35
        on right: 34 51
    variable_name_tail (89)
        on left: 36 37
        on right: 35 37
    procedure_definitions_opt (90)
        on left: 38 39
        on right: 5 6 7
    procedure_definitions (91)
        on left: 40
        on right: 8 39
    procedure_definition_tail (92)
        on left: 41 42
        on right: 40 42
    procedure_definition (93)
        on left: 43
        on right: 40 42
    procedure_header (94)
        on left: 44
        on right: 43
    procedure_block (95)
        on left: 45
        on right: 43
    formal_parameters_opt (96)
        on left: 46 47
        on right: 44
    formal_parameters (97)
        on left: 48
        on right: 47
    formal_parameter_tail (98)
        on left: 49 50
        on right: 48 50
    formal_parameter (99)
        on left: 51
        on right: 48 50
    pass_mode_opt (100)
        on left: 52 53 54
        on right: 51
    data_type (101)
        on left: 55 56 57 58 59 60
        on right: 21 26 35
    instruction_list (102)
        on left: 61
        on right: 2 70
    instruction_tail (103)
        on left: 62 63
        on right: 61 63
    instruction (104)
        on left: 64 65 66 67 68 69 70 71
        on right: 61 63 90 92 97 101 105 106
    assignment_statement (105)
        on left: 72
        on right: 64
    input_statement (106)
        on left: 73
        on right: 65
    output_statement (107)
        on left: 74
        on right: 66
    print_list (108)
        on left: 75
        on right: 74
    print_item_tail (109)
        on left: 76 77
        on right: 75 77
    print_item (110)
        on left: 78 79
        on right: 75 77
    procedure_call (111)
        on left: 80
        on right: 67
    actual_parameters_opt (112)
        on left: 81 82
        on right: 80
    actual_parameters (113)
        on left: 83
        on right: 82
    actual_parameter_tail (114)
        on left: 84 85
        on right: 83 85
    actual_parameter (115)
        on left: 86
        on right: 83 85
    conditional_statement (116)
        on left: 87 88 89
        on right: 68
    if_statement (117)
        on left: 90
        on right: 87 92 93 95
    condition (118)
        on left: 91
        on right: 90 105 106
    if_else_statement (119)
        on left: 92
        on right: 88
    if_else_if_statement (120)
        on left: 93
        on right: 89
    else_if_tail (121)
        on left: 94 95
        on right: 93 95
    optional_else (122)
        on left: 96 97
        on right: 93
    repetition_statement (123)
        on left: 98 99 100
        on right: 69
    for_statement (124)
        on left: 101
        on right: 98
    repetition_range (125)
        on left: 102
        on right: 101
    step_opt (126)
        on left: 103 104
        on right: 102
    while_statement (127)
        on left: 105
        on right: 99
    repeat_until_statement (128)
        on left: 106
        on right: 100
    expression (129)
        on left: 107 108
        on right: 72 86 91 102 104 137 145
    relational_operator (130)
        on left: 109 110 111 112 113 114
        on right: 108
    simple_expression (131)
        on left: 115
        on right: 107 108
    sign_opt (132)
        on left: 116 117
        on right: 115
    sign_operator (133)
        on left: 118 119
        on right: 117 122
    addition_tail (134)
        on left: 120 121
        on right: 115 121
    addition_operator (135)
        on left: 122 123
        on right: 121
    term (136)
        on left: 124
        on right: 115 121
    multiplication_tail (137)
        on left: 125 126
        on right: 124 126
    multiplication_operator (138)
        on left: 127 128 129 130 131 132
        on right: 126
    factor (139)
        on left: 133 134 135 136 137 138
        on right: 124 126 138
    identifier_factor (140)
        on left: 139 140
        on right: 136
    variable_access (141)
        on left: 141 142
        on right: 72 73 78
    selector (142)
        on left: 143 144
        on right: 140 142
    indexed_selector (143)
        on left: 145
        on right: 143
    field_selector (144)
        on left: 146
        on right: 144
    constant_value (145)
        on left: 147 148 149 150
        on right: 12
    numeric (146)
        on left: 151 152
        on right: 133 147
    literal (147)
        on left: 153 154
        on right: 79 134 148
    boolean_value (148)
        on left: 155 156
        on right: 135 149
    program_name (149)
        on left: 157
        on right: 1
    constant_name (150)
        on left: 158
        on right: 12 150
    type_name (151)
        on left: 159
        on right: 18 60
    field_name (152)
        on left: 160
        on right: 26 146
    variable_name (153)
        on left: 161
        on right: 35 37 102
    procedure_name (154)
        on left: 162
        on right: 44 80


State 0

    0 $accept: . program $end
    1 program: . PROGRAM program_name SEMICOLON program_block DOT

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM . program_name SEMICOLON program_block DOT
  157 program_name: . IDENTIFIER

    IDENTIFIER  shift, and go to state 3

    program_name  go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

  157 program_name: IDENTIFIER .

    $default  reduce using rule 157 (program_name)


State 4

    1 program: PROGRAM program_name . SEMICOLON program_block DOT

    SEMICOLON  shift, and go to state 6


State 5

    0 $accept: program $end .

    $default  accept


State 6

    1 program: PROGRAM program_name SEMICOLON . program_block DOT
    2 program_block: . declaration_part_opt instruction_list
    3 declaration_part_opt: %empty .  [LBRACE]
    4                     | . declaration_part
    5 declaration_part: . constant_definitions type_definitions_opt variable_definitions_opt procedure_definitions_opt
    6                 | . type_definitions variable_definitions_opt procedure_definitions_opt
    7                 | . variable_definitions procedure_definitions_opt
    8                 | . procedure_definitions
    9 constant_definitions: . CONST constant_definition constant_definition_tail
   15 type_definitions: . TYPE type_definition type_definition_tail
   31 variable_definitions: . VAR variable_definition variable_definition_tail
   40 procedure_definitions: . procedure_definition procedure_definition_tail
   43 procedure_definition: . procedure_header procedure_block SEMICOLON
   44 procedure_header: . PROCEDURE procedure_name LPAREN formal_parameters_opt RPAREN SEMICOLON

    CONST      shift, and go to state 7
    TYPE       shift, and go to state 8
    VAR        shift, and go to state 9
    PROCEDURE  shift, and go to state 10

    $default  reduce using rule 3 (declaration_part_opt)

    program_block          go to state 11
    declaration_part_opt   go to state 12
    declaration_part       go to state 13
    constant_definitions   go to state 14
    type_definitions       go to state 15
    variable_definitions   go to state 16
    procedure_definitions  go to state 17
    procedure_definition   go to state 18
    procedure_header       go to state 19


State 7

    9 constant_definitions: CONST . constant_definition constant_definition_tail
   12 constant_definition: . constant_name ASSIGN constant_value SEMICOLON
  158 constant_name: . IDENTIFIER

    IDENTIFIER  shift, and go to state 20

    constant_definition  go to state 21
    constant_name        go to state 22


State 8

   15 type_definitions: TYPE . type_definition type_definition_tail
   18 type_definition: . type_name ASSIGN compound_type SEMICOLON
  159 type_name: . IDENTIFIER

    IDENTIFIER  shift, and go to state 23

    type_definition  go to state 24
    type_name        go to state 25


State 9

   31 variable_definitions: VAR . variable_definition variable_definition_tail
   34 variable_definition: . variable_group SEMICOLON
   35 variable_group: . variable_name variable_name_tail COLON data_type
  161 variable_name: . IDENTIFIER

    IDENTIFIER  shift, and go to state 26

    variable_definition  go to state 27
    variable_group       go to state 28
    variable_name        go to state 29


State 10

   44 procedure_header: PROCEDURE . procedure_name LPAREN formal_parameters_opt RPAREN SEMICOLON
  162 procedure_name: . IDENTIFIER

    IDENTIFIER  shift, and go to state 30

    procedure_name  go to state 31


State 11

    1 program: PROGRAM program_name SEMICOLON program_block . DOT

    DOT  shift, and go to state 32


State 12

    2 program_block: declaration_part_opt . instruction_list
   61 instruction_list: . LBRACE instruction instruction_tail RBRACE

    LBRACE  shift, and go to state 33

    instruction_list  go to state 34


State 13

    4 declaration_part_opt: declaration_part .

    $default  reduce using rule 4 (declaration_part_opt)


State 14

    5 declaration_part: constant_definitions . type_definitions_opt variable_definitions_opt procedure_definitions_opt
   13 type_definitions_opt: %empty .  [VAR, PROCEDURE, LBRACE]
   14                     | . type_definitions
   15 type_definitions: . TYPE type_definition type_definition_tail

    TYPE  shift, and go to state 8

    $default  reduce using rule 13 (type_definitions_opt)

    type_definitions_opt  go to state 35
    type_definitions      go to state 36


State 15

    6 declaration_part: type_definitions . variable_definitions_opt procedure_definitions_opt
   29 variable_definitions_opt: %empty .  [PROCEDURE, LBRACE]
   30                         | . variable_definitions
   31 variable_definitions: . VAR variable_definition variable_definition_tail

    VAR  shift, and go to state 9

    $default  reduce using rule 29 (variable_definitions_opt)

    variable_definitions_opt  go to state 37
    variable_definitions      go to state 38


State 16

    7 declaration_part: variable_definitions . procedure_definitions_opt
   38 procedure_definitions_opt: %empty .  [LBRACE]
   39                          | . procedure_definitions
   40 procedure_definitions: . procedure_definition procedure_definition_tail
   43 procedure_definition: . procedure_header procedure_block SEMICOLON
   44 procedure_header: . PROCEDURE procedure_name LPAREN formal_parameters_opt RPAREN SEMICOLON

    PROCEDURE  shift, and go to state 10

    $default  reduce using rule 38 (procedure_definitions_opt)

    procedure_definitions_opt  go to state 39
    procedure_definitions      go to state 40
    procedure_definition       go to state 18
    procedure_header           go to state 19


State 17

    8 declaration_part: procedure_definitions .

    $default  reduce using rule 8 (declaration_part)


State 18

   40 procedure_definitions: procedure_definition . procedure_definition_tail
   41 procedure_definition_tail: %empty .
   42                          | . procedure_definition_tail procedure_definition

    $default  reduce using rule 41 (procedure_definition_tail)

    procedure_definition_tail  go to state 41


State 19

    2 program_block: . declaration_part_opt instruction_list
    3 declaration_part_opt: %empty .  [LBRACE]
    4                     | . declaration_part
    5 declaration_part: . constant_definitions type_definitions_opt variable_definitions_opt procedure_definitions_opt
    6                 | . type_definitions variable_definitions_opt procedure_definitions_opt
    7                 | . variable_definitions procedure_definitions_opt
    8                 | . procedure_definitions
    9 constant_definitions: . CONST constant_definition constant_definition_tail
   15 type_definitions: . TYPE type_definition type_definition_tail
   31 variable_definitions: . VAR variable_definition variable_definition_tail
   40 procedure_definitions: . procedure_definition procedure_definition_tail
   43 procedure_definition: . procedure_header procedure_block SEMICOLON
   43                     | procedure_header . procedure_block SEMICOLON
   44 procedure_header: . PROCEDURE procedure_name LPAREN formal_parameters_opt RPAREN SEMICOLON
   45 procedure_block: . program_block

    CONST      shift, and go to state 7
    TYPE       shift, and go to state 8
    VAR        shift, and go to state 9
    PROCEDURE  shift, and go to state 10

    $default  reduce using rule 3 (declaration_part_opt)

    program_block          go to state 42
    declaration_part_opt   go to state 12
    declaration_part       go to state 13
    constant_definitions   go to state 14
    type_definitions       go to state 15
    variable_definitions   go to state 16
    procedure_definitions  go to state 17
    procedure_definition   go to state 18
    procedure_header       go to state 19
    procedure_block        go to state 43


State 20

  158 constant_name: IDENTIFIER .

    $default  reduce using rule 158 (constant_name)


State 21

    9 constant_definitions: CONST constant_definition . constant_definition_tail
   10 constant_definition_tail: %empty .
   11                         | . constant_definition_tail constant_definition

    $default  reduce using rule 10 (constant_definition_tail)

    constant_definition_tail  go to state 44


State 22

   12 constant_definition: constant_name . ASSIGN constant_value SEMICOLON

    ASSIGN  shift, and go to state 45


State 23

  159 type_name: IDENTIFIER .

    $default  reduce using rule 159 (type_name)


State 24

   15 type_definitions: TYPE type_definition . type_definition_tail
   16 type_definition_tail: %empty .
   17                     | . type_definition_tail type_definition

    $default  reduce using rule 16 (type_definition_tail)

    type_definition_tail  go to state 46


State 25

   18 type_definition: type_name . ASSIGN compound_type SEMICOLON

    ASSIGN  shift, and go to state 47


State 26

  161 variable_name: IDENTIFIER .

    $default  reduce using rule 161 (variable_name)


State 27

   31 variable_definitions: VAR variable_definition . variable_definition_tail
   32 variable_definition_tail: %empty .
   33                         | . variable_definition_tail variable_definition

    $default  reduce using rule 32 (variable_definition_tail)

    variable_definition_tail  go to state 48


State 28

   34 variable_definition: variable_group . SEMICOLON

    SEMICOLON  shift, and go to state 49


State 29

   35 variable_group: variable_name . variable_name_tail COLON data_type
   36 variable_name_tail: %empty .
   37                   | . variable_name_tail COMMA variable_name

    $default  reduce using rule 36 (variable_name_tail)

    variable_name_tail  go to state 50


State 30

  162 procedure_name: IDENTIFIER .

    $default  reduce using rule 162 (procedure_name)


State 31

   44 procedure_header: PROCEDURE procedure_name . LPAREN formal_parameters_opt RPAREN SEMICOLON

    LPAREN  shift, and go to state 51


State 32

    1 program: PROGRAM program_name SEMICOLON program_block DOT .

    $default  reduce using rule 1 (program)


State 33

   61 instruction_list: . LBRACE instruction instruction_tail RBRACE
   61                 | LBRACE . instruction instruction_tail RBRACE
   64 instruction: . assignment_statement
   65            | . input_statement
   66            | . output_statement
   67            | . procedure_call
   68            | . conditional_statement
   69            | . repetition_statement
   70            | . instruction_list
   71            | %empty .  [SEMICOLON, RBRACE]
   72 assignment_statement: . variable_access ASSIGN expression
   73 input_statement: . READ LPAREN variable_access RPAREN
   74 output_statement: . PRINT LPAREN print_list RPAREN
   80 procedure_call: . procedure_name LPAREN actual_parameters_opt RPAREN
   87 conditional_statement: . if_statement
   88                      | . if_else_statement
   89                      | . if_else_if_statement
   90 if_statement: . IF LPAREN condition RPAREN THEN instruction
   92 if_else_statement: . if_statement ELSE instruction
   93 if_else_if_statement: . if_statement SEMICOLON ELSE if_statement else_if_tail optional_else
   98 repetition_statement: . for_statement
   99                     | . while_statement
  100                     | . repeat_until_statement
  101 for_statement: . FOR LPAREN repetition_range RPAREN instruction
  105 while_statement: . WHILE LPAREN condition RPAREN DO instruction
  106 repeat_until_statement: . REPEAT instruction UNTIL LPAREN condition RPAREN
  141 variable_access: . IDENTIFIER
  142                | . IDENTIFIER selector
  162 procedure_name: . IDENTIFIER

    READ        shift, and go to state 52
    PRINT       shift, and go to state 53
    IF          shift, and go to state 54
    FOR         shift, and go to state 55
    WHILE       shift, and go to state 56
    REPEAT      shift, and go to state 57
    LBRACE      shift, and go to state 33
    IDENTIFIER  shift, and go to state 58

    $default  reduce using rule 71 (instruction)

    instruction_list        go to state 59
    instruction             go to state 60
    assignment_statement    go to state 61
    input_statement         go to state 62
    output_statement        go to state 63
    procedure_call          go to state 64
    conditional_statement   go to state 65
    if_statement            go to state 66
    if_else_statement       go to state 67
    if_else_if_statement    go to state 68
    repetition_statement    go to state 69
    for_statement           go to state 70
    while_statement         go to state 71
    repeat_until_statement  go to state 72
    variable_access         go to state 73
    procedure_name          go to state 74


State 34

    2 program_block: declaration_part_opt instruction_list .

    $default  reduce using rule 2 (program_block)


State 35

    5 declaration_part: constant_definitions type_definitions_opt . variable_definitions_opt procedure_definitions_opt
   29 variable_definitions_opt: %empty .  [PROCEDURE, LBRACE]
   30                         | . variable_definitions
   31 variable_definitions: . VAR variable_definition variable_definition_tail

    VAR  shift, and go to state 9

    $default  reduce using rule 29 (variable_definitions_opt)

    variable_definitions_opt  go to state 75
    variable_definitions      go to state 38


State 36

   14 type_definitions_opt: type_definitions .

    $default  reduce using rule 14 (type_definitions_opt)


State 37

    6 declaration_part: type_definitions variable_definitions_opt . procedure_definitions_opt
   38 procedure_definitions_opt: %empty .  [LBRACE]
   39                          | . procedure_definitions
   40 procedure_definitions: . procedure_definition procedure_definition_tail
   43 procedure_definition: . procedure_header procedure_block SEMICOLON
   44 procedure_header: . PROCEDURE procedure_name LPAREN formal_parameters_opt RPAREN SEMICOLON

    PROCEDURE  shift, and go to state 10

    $default  reduce using rule 38 (procedure_definitions_opt)

    procedure_definitions_opt  go to state 76
    procedure_definitions      go to state 40
    procedure_definition       go to state 18
    procedure_header           go to state 19


State 38

   30 variable_definitions_opt: variable_definitions .

    $default  reduce using rule 30 (variable_definitions_opt)


State 39

    7 declaration_part: variable_definitions procedure_definitions_opt .

    $default  reduce using rule 7 (declaration_part)


State 40

   39 procedure_definitions_opt: procedure_definitions .

    $default  reduce using rule 39 (procedure_definitions_opt)


State 41

   40 procedure_definitions: procedure_definition procedure_definition_tail .  [LBRACE]
   42 procedure_definition_tail: procedure_definition_tail . procedure_definition
   43 procedure_definition: . procedure_header procedure_block SEMICOLON
   44 procedure_header: . PROCEDURE procedure_name LPAREN formal_parameters_opt RPAREN SEMICOLON

    PROCEDURE  shift, and go to state 10

    $default  reduce using rule 40 (procedure_definitions)

    procedure_definition  go to state 77
    procedure_header      go to state 19


State 42

   45 procedure_block: program_block .

    $default  reduce using rule 45 (procedure_block)


State 43

   43 procedure_definition: procedure_header procedure_block . SEMICOLON

    SEMICOLON  shift, and go to state 78


State 44

    9 constant_definitions: CONST constant_definition constant_definition_tail .  [TYPE, VAR, PROCEDURE, LBRACE]
   11 constant_definition_tail: constant_definition_tail . constant_definition
   12 constant_definition: . constant_name ASSIGN constant_value SEMICOLON
  158 constant_name: . IDENTIFIER

    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 9 (constant_definitions)

    constant_definition  go to state 79
    constant_name        go to state 22


State 45

   12 constant_definition: constant_name ASSIGN . constant_value SEMICOLON
  147 constant_value: . numeric
  148               | . literal
  149               | . boolean_value
  150               | . constant_name
  151 numeric: . INTEGER_LITERAL
  152        | . REAL_LITERAL
  153 literal: . STRING_LITERAL
  154        | . CHAR_LITERAL
  155 boolean_value: . TRUE
  156              | . FALSE
  158 constant_name: . IDENTIFIER

    TRUE             shift, and go to state 80
    FALSE            shift, and go to state 81
    IDENTIFIER       shift, and go to state 20
    INTEGER_LITERAL  shift, and go to state 82
    REAL_LITERAL     shift, and go to state 83
    STRING_LITERAL   shift, and go to state 84
    CHAR_LITERAL     shift, and go to state 85

    constant_value  go to state 86
    numeric         go to state 87
    literal         go to state 88
    boolean_value   go to state 89
    constant_name   go to state 90


State 46

   15 type_definitions: TYPE type_definition type_definition_tail .  [VAR, PROCEDURE, LBRACE]
   17 type_definition_tail: type_definition_tail . type_definition
   18 type_definition: . type_name ASSIGN compound_type SEMICOLON
  159 type_name: . IDENTIFIER

    IDENTIFIER  shift, and go to state 23

    $default  reduce using rule 15 (type_definitions)

    type_definition  go to state 91
    type_name        go to state 25


State 47

   18 type_definition: type_name ASSIGN . compound_type SEMICOLON
   19 compound_type: . list_type
   20              | . record_type
   21 list_type: . LIST LBRACKET INTEGER_LITERAL RBRACKET OF data_type
   22 record_type: . RECORD LBRACE field_list RBRACE

    LIST    shift, and go to state 92
    RECORD  shift, and go to state 93

    compound_type  go to state 94
    list_type      go to state 95
    record_type    go to state 96


State 48

   31 variable_definitions: VAR variable_definition variable_definition_tail .  [PROCEDURE, LBRACE]
   33 variable_definition_tail: variable_definition_tail . variable_definition
   34 variable_definition: . variable_group SEMICOLON
   35 variable_group: . variable_name variable_name_tail COLON data_type
  161 variable_name: . IDENTIFIER

    IDENTIFIER  shift, and go to state 26

    $default  reduce using rule 31 (variable_definitions)

    variable_definition  go to state 97
    variable_group       go to state 28
    variable_name        go to state 29


State 49

   34 variable_definition: variable_group SEMICOLON .

    $default  reduce using rule 34 (variable_definition)


State 50

   35 variable_group: variable_name variable_name_tail . COLON data_type
   37 variable_name_tail: variable_name_tail . COMMA variable_name

    COLON  shift, and go to state 98
    COMMA  shift, and go to state 99


State 51

   44 procedure_header: PROCEDURE procedure_name LPAREN . formal_parameters_opt RPAREN SEMICOLON
   46 formal_parameters_opt: %empty .  [RPAREN]
   47                      | . formal_parameters
   48 formal_parameters: . formal_parameter formal_parameter_tail
   51 formal_parameter: . pass_mode_opt variable_group
   52 pass_mode_opt: %empty .  [IDENTIFIER]
   53              | . BY_VALUE
   54              | . BY_REFERENCE

    BY_VALUE      shift, and go to state 100
    BY_REFERENCE  shift, and go to state 101

    IDENTIFIER  reduce using rule 52 (pass_mode_opt)
    $default    reduce using rule 46 (formal_parameters_opt)

    formal_parameters_opt  go to state 102
    formal_parameters      go to state 103
    formal_parameter       go to state 104
    pass_mode_opt          go to state 105


State 52

   73 input_statement: READ . LPAREN variable_access RPAREN

    LPAREN  shift, and go to state 106


State 53

   74 output_statement: PRINT . LPAREN print_list RPAREN

    LPAREN  shift, and go to state 107


State 54

   90 if_statement: IF . LPAREN condition RPAREN THEN instruction

    LPAREN  shift, and go to state 108


State 55

  101 for_statement: FOR . LPAREN repetition_range RPAREN instruction

    LPAREN  shift, and go to state 109


State 56

  105 while_statement: WHILE . LPAREN condition RPAREN DO instruction

    LPAREN  shift, and go to state 110


State 57

   61 instruction_list: . LBRACE instruction instruction_tail RBRACE
   64 instruction: . assignment_statement
   65            | . input_statement
   66            | . output_statement
   67            | . procedure_call
   68            | . conditional_statement
   69            | . repetition_statement
   70            | . instruction_list
   71            | %empty .  [UNTIL]
   72 assignment_statement: . variable_access ASSIGN expression
   73 input_statement: . READ LPAREN variable_access RPAREN
   74 output_statement: . PRINT LPAREN print_list RPAREN
   80 procedure_call: . procedure_name LPAREN actual_parameters_opt RPAREN
   87 conditional_statement: . if_statement
   88                      | . if_else_statement
   89                      | . if_else_if_statement
   90 if_statement: . IF LPAREN condition RPAREN THEN instruction
   92 if_else_statement: . if_statement ELSE instruction
   93 if_else_if_statement: . if_statement SEMICOLON ELSE if_statement else_if_tail optional_else
   98 repetition_statement: . for_statement
   99                     | . while_statement
  100                     | . repeat_until_statement
  101 for_statement: . FOR LPAREN repetition_range RPAREN instruction
  105 while_statement: . WHILE LPAREN condition RPAREN DO instruction
  106 repeat_until_statement: . REPEAT instruction UNTIL LPAREN condition RPAREN
  106                       | REPEAT . instruction UNTIL LPAREN condition RPAREN
  141 variable_access: . IDENTIFIER
  142                | . IDENTIFIER selector
  162 procedure_name: . IDENTIFIER

    READ        shift, and go to state 52
    PRINT       shift, and go to state 53
    IF          shift, and go to state 54
    FOR         shift, and go to state 55
    WHILE       shift, and go to state 56
